--- a/krigingCityMap/src/app/layout/layout.component.html
+++ b/krigingCityMap/src/app/layout/layout.component.html
@@ -1,3 +1,4 @@
-<p>
-  layout works!
-</p>
+<app-header></app-header>
+<section class="main-container">
+  <router-outlet></router-outlet>
+</section>
