--- a/krigingCityMap/src/styles.css
+++ b/krigingCityMap/src/styles.css
@@ -1,1 +1,201 @@
 /* You can add global styles to this file, and also import other style files */
+/*CSS Sngular Material*/
+/*
+"../node_modules/@angular/material/prebuilt-themes/pink-bluegrey.css",
+"../node_modules/@angular/material/prebuilt-themes/deeppurple-amber.css",
+"../node_modules/@angular/material/prebuilt-themes/indigo-pink.css",
+"../node_modules/@angular/material/prebuilt-themes/purple-green.css
+*/
+@import '~@angular/material/prebuilt-themes/indigo-pink.css';
+
+html{
+  margin:0;
+  height:100%;
+  width: 100%;
+}
+body{
+  /*display:flex;
+  flex-direction:column;*/
+  height:100%;
+  width: 100%;
+  padding:0;
+  margin:0;
+}
+
+.push-right-school-details .main-container {
+  margin-left: 360px !important; /*408*/
+}
+
+/* CSS for schoolsDetails screen */
+.push-right-school-details .sidebar-school-details {
+  left: 360px !important; /*408*/
+}
+
+@media screen and (max-width: 992px) {
+  .push-right-school-details .sidebar-school-details {
+    left: 360px !important; /*408*/
+  }
+}
+
+/* responsive CSS for sidebar panel*/
+.push-right .sidebar {
+  left: 320px!important;
+}
+
+@media screen and (max-width: 992px) {
+  .push-right .sidebar {
+    left: 320px !important;
+  }
+}
+
+/* rtl CSS*/
+.rtl .sidebar {
+  left: auto !important;
+  right: 0 !important;
+}
+.rtl .sidebar > ul.list-group {
+  padding: 0;
+}
+.rtl .main-container {
+  margin-left: 0 !important;
+  margin-right: 235px;
+}
+.rtl * {
+  direction: rtl;
+}
+@media screen and (max-width: 992px) {
+  .rtl .navbar-brand {
+    direction: ltr;
+  }
+  .rtl .sidebar {
+    right: -235px !important;
+  }
+  .rtl .main-container {
+    margin-right: 0;
+  }
+  .rtl.push-right .sidebar {
+    left: auto !important;
+    right: 0 !important;
+  }
+}
+
+/* spinner CSS*/
+.spinner {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  -ms-transform: translate(-50%, -50%);
+  /* IE 9 */
+  -webkit-transform: translate(-50%, -50%);
+  /* Safari */
+  transform: translate(-50%, -50%);
+  /* Standard syntax */
+  width: 60px;
+  height: 60px;
+}
+.double-bounce1, .double-bounce2 {
+  width: 100%;
+  height: 100%;
+  border-radius: 50%;
+  background-color: #000;
+  opacity: 0.6;
+  position: absolute;
+  top: 0;
+  left: 0;
+  -webkit-animation: sk-bounce 2s infinite ease-in-out;
+  animation: sk-bounce 2s infinite ease-in-out;
+}
+.double-bounce2 {
+  -webkit-animation-delay: -1s;
+  animation-delay: -1s;
+}
+@-webkit-keyframes sk-bounce {
+  0%, 100% {
+    -webkit-transform: scale(0);
+  }
+  50% {
+    -webkit-transform: scale(1);
+  }
+}
+@keyframes sk-bounce {
+  0%, 100% {
+    transform: scale(0);
+    -webkit-transform: scale(0);
+  }
+  50% {
+    transform: scale(1);
+    -webkit-transform: scale(1);
+  }
+}
+
+/* Utils CSS*/
+.fs-12 {
+  font-size: 12px;
+}
+
+/* icon menu */
+/*@media (min-width: 992px) {
+  .navbar-toggleable-md .navbar-toggler {
+    display: block;
+  }
+*/
+
+/* Margin left*/
+.ml-6 {
+  margin-left: 4rem !important;
+}
+
+
+
+.ml-7 {
+  margin-left: 14rem !important;
+}
+
+/* logotipos */
+.sprite {
+  background: url(assets/images/sprite.png) no-repeat;
+}
+
+/* logo-cem*/
+.logo-cem {
+  display: block;
+  width: 108px;
+  height: 40px;
+  background-position: -188px -42px;
+}
+
+.school-div-icon {
+  background: url(assets/images/marcador_school_default.png) no-repeat;
+}
+
+.cursor-hand {
+  cursor: pointer!important;
+}
+
+/* toggle*/
+.example-section {
+  display: flex;
+  align-content: center;
+  align-items: center;
+  height: 60px;
+}
+
+.example-margin {
+  margin: 10px;
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-bar {
+  background-color: rgba(66, 133, 244,.5);
+}
+
+.mat-slide-toggle.mat-checked:not(.mat-disabled) .mat-slide-toggle-thumb {
+  background-color: #4285f4;
+}
+
+/* icons */
+.material-icons.md-36 { font-size: 36px; }
+
+/* separator */
+.separator {
+  height: 10px;
+}
